--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -1,30 +1,109 @@
 @import 'common-style.scss';
 
-.content__block {
+@keyframes snowfall {
+   0% {
+     transform: translate3d(0, 0, 0);
+   }
+   100% {
+     transform: translate3d(0, 100vh, 0);
+   }
+}
+@keyframes wave {
+   0% {
+      opacity: 0;
+   }
+   30% {
+      opacity: 0.4;
+   }
+   60% {
+      opacity: 0.8;
+   }
+   100% {
+      opacity: 1;
+   }
+}
+.content {
+   background-color: $color-8;
+   z-index: 0;
+   position: relative;
+
+   &__block {
    width: 100%;
    height: 100%;
-   margin:0 auto;
-   background-color: #d5d5d5;
    display: flex;
    justify-content: center;
    align-items: center;
-   margin: 30px;
+   }
+   &__back {
+      position:relative;
+   }
+   &__waves {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+   }
 }
+.wave-1, .wave-2 {
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   margin-top: 10%;
+}
+.wave-1 {
+   width: 200%;
+   left: -7%;
+   top: 32%;
+   background-color: $wave-1;
+   border-radius: 35% 15% 0px 0px;  
+   animation: wave 1s linear;  
+}
+.wave-2 {
+   left: -40%; 
+   top: 56%;
+   background-color: $wave-2; 
+   border-radius: 45% 45% 0px 0px; 
+   animation: wave 3s linear; 
+}
+
+.snowflake {
+   --size: 1vw;
+   width: var(--size);
+   height: var(--size);
+   background: $color-7;
+   border-radius: 50%;
+   position: absolute;
+   top: -5vh;
+   z-index: 2;
+}
+
+@for $i from 1 through 50 {
+   .snowflake:nth-child(#{$i}) {
+     --size: #{random(5) * 0.2}vw; 
+     left: #{random(100)}vw;
+     animation: snowfall #{5 + random(10)}s linear infinite;
+   }
+}
+
+
 .calendar {
    display: flex;
    width: 100%;
    height: 100%;
-   padding: 30px 130px;
+   padding: 30px;
    justify-content: center;
    align-items:center;
    gap: 15px;
    flex-wrap: wrap;
+  padding-left: 200px;
+   padding-bottom: 200px;
 
    &__card {
-      width: 15rem;
-      height: 15rem;
+      width: 8rem;
+      height: 8rem;
       perspective: 1000px;
       border: 1px solid black;
+
    }
 }
 .card {
@@ -42,20 +121,58 @@
    align-items: center;
    transition: 1s;
    backface-visibility: hidden;
-   background-color: #fff;
+   cursor: pointer;
 }
-.front img {
-   max-width: 100%;
-   min-width: 100%;
-   height: auto;
+.card:hover .front {
+   transform: 0.3s rotateY(180deg);
+}
+.card:hover .back {
+   transform: rotateY(360deg);
 }
 .back {
    transform: rotateY(180deg);
 }
-.card:hover .front {
-   transform: 0.3s rotateY(180deg);
-   
+.front {
+   background-color: $color-4;
+   border: 1px solid $color-7;
+   }
+   .front span {
+      display: block;
+      background-color: $color-3;
+      font-size: 24px;
+      font-weight: 600;
+      border-radius: 0px;
+      width: 60px;
+      height: 60px;
+      padding: 23px;
+      text-align: bottom left;
+      border: 3px solid $color-9;  
+      position: relative;
+      box-shadow: inset 0px 0px 8px $color-7;
+   }
+   .front span:before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 16px;
+      width: 6px;
+      height: 100%;
+      border-left: 3px solid $border;
+   }
+   .front span:after {
+      position: absolute;
+      content: '';
+      top: 16px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-top: 3px solid $border;
+   }
+.back {
+   background-color: $color-2;
 }
-.card:hover .back {
-   transform: rotateY(360deg);
+.back img {
+   max-width: 100%;
+   min-width: 100%;
+   height: auto;
 }
