--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -1,1 +1,12 @@
 @import 'common-style.scss';
+
+.page {
+   background: linear-gradient(
+      rgba(255,255,255, 0) .9em, rgba(0, 0, 0, .15) 1em)
+    0 0,
+    linear-gradient(90deg,
+      rgba(255,255,255, 0) .9em, rgba(0, 0, 0, .15) 1em)
+    0 0;
+  background-size: 1em 1em;
+  background-color: $color-1;
+}
