--- a/css/index-style.css
+++ b/css/index-style.css
@@ -9,11 +9,12 @@
 }
 
 html, body {
-  width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   font-weight: 400;
   line-height: 150%;
   font-size: 16px;
-  background-color: white;
   scroll-behavior: smooth;
 }
 
@@ -43,19 +44,30 @@ nav, footer, header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 100%;
 }
 .page__header {
   height: 60px;
   width: 100%;
-  background-color: red;
+  background-color: #25330F;
 }
 .page__content {
   min-height: 100vh;
+  width: 100%;
   height: 100%;
-  background-color: green;
+  background-color: #D4C9B4;
 }
 .page__footer {
   height: 60px;
   width: 100%;
-  background-color: red;
+  background-color: #25330F;
+  z-index: 10;
+  position: relative;
+}
+
+.page {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.9em, rgba(255, 255, 255, 0)), color-stop(1em, rgba(0, 0, 0, 0.15))) 0 0, -webkit-gradient(linear, left top, right top, color-stop(0.9em, rgba(255, 255, 255, 0)), color-stop(1em, rgba(0, 0, 0, 0.15))) 0 0;
+  background: linear-gradient(rgba(255, 255, 255, 0) 0.9em, rgba(0, 0, 0, 0.15) 1em) 0 0, linear-gradient(90deg, rgba(255, 255, 255, 0) 0.9em, rgba(0, 0, 0, 0.15) 1em) 0 0;
+  background-size: 1em 1em;
+  background-color: #D4C9B4;
 }
