--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -22,6 +22,23 @@
       opacity: 1;
    }
 }
+@keyframes snowmen {
+   0% {
+
+   }
+   25% {
+
+   }
+   50% {
+
+   }
+   75% {
+
+   }
+   100%{
+      
+   }
+}
 .content {
    background-color: $color-8;
    z-index: 0;
@@ -42,6 +59,9 @@
       height: 100%;
       position: relative;
       overflow: hidden;
+   }
+   &__snowmen {
+      position:fixed;
    }
 }
 .wave-1, .wave-2 {
@@ -84,8 +104,129 @@
      animation: snowfall #{5 + random(10)}s linear infinite;
    }
 }
+.circle-1, .circle-2, .circle-3 {
+   position: relative;
+   border-radius: 45%;
+   background-color: $wave-1;
+   border: 3px solid $color-6;
+      
+}
+.circle-1 {
+   width: 80px;
+   height: 80px;
+   top: 215px;
+   left:90px;
+   z-index:20;
+   box-shadow: 
+      inset 3px -6px 1px $color-8,
+      inset 10px -20px 4px $wave-2;
+      position:relative;
+   &::before {
+      position: absolute;
+      content: '';
+      width: 12px;
+      height: 12px;
+      top: 20px;
+      left: 23px;
+      border-radius: 50%;
+      background-color: $color-6;
+   }
+   &::after {
+      position: absolute;
+      content: '';
+      width: 10px;
+      height: 10px;
+      top: 18px;
+      left: 43px;
+      border-radius: 50%;
+      background-color: $color-6;
+   }
 
+}  
+.circle-2 {
+   width: 120px;
+   height: 120px;
+   top: 200px;
+   left:80px;
+   z-index: 19;
+   box-shadow: 
+      inset -2px -5px 1px $color-8,
+      inset 15px -25px 4px $wave-2;
+   &::before, 
+   &::after {
+      content:'';
+      position: absolute;
+      background-color: $color-4;
+      border-radius:50%;
+   }
+   &::before {
+      top: 40px;
+      width: 10px;
+      height: 10px;
+      left: 60px;
+   }
+   &::after {
+      top: 60px;
+      width: 10px;
+      height: 10px;
+      left: 60px;
+   }
 
+}
+.circle-3 {
+   width: 160px;
+   height: 140px;
+   top: 190px;
+   left:60px;
+   z-index: 18;
+   box-shadow: 
+      inset -3px -10px 1px $color-8,
+      inset 14px -30px 4px $wave-2;
+   &::before, &::after {
+      position: absolute;
+      content: '';
+   }
+   &::before {
+      width: 120px;
+      height: 120px;
+      top:-100px;
+      left:-10px;
+      border-radius: 45%;
+      border-left: 4px solid $color-9;
+   }
+   &::after {
+      width: 120px;
+      height: 120px;
+      top:-100px;
+      left:30px;
+      border-radius: 45%;
+      border-right: 4px solid $color-9;
+   }
+   
+}
+.face {
+   position: relative;
+   z-index: 20;
+  &::after {
+      content: '';
+      position: absolute; 
+      border-radius: 120px; 
+      border: 15px solid transparent;
+      border-left: 70px solid $color-3;
+      top: -95px;
+      left: 127px;  
+  }
+  &::before {
+   content:'';
+   position: absolute;
+   top: -96px;
+   left: 120px;
+   width: 30px;
+   height: 30px;
+   border-bottom: 4px solid $color-6;
+   border-radius: 35%;
+  }
+}
 .calendar {
    display: flex;
    width: 100%;
