--- a/css/calendar-style.css
+++ b/css/calendar-style.css
@@ -114,6 +114,8 @@ nav, footer, header {
     opacity: 1;
   }
 }
+@-webkit-keyframes snowmen {}
+@keyframes snowmen {}
 .content {
   background-color: #a2a2a2;
   z-index: 0;
@@ -140,6 +142,9 @@ nav, footer, header {
   height: 100%;
   position: relative;
   overflow: hidden;
+}
+.content__snowmen {
+  position: fixed;
 }
 
 .wave-1, .wave-2 {
@@ -181,352 +186,472 @@ nav, footer, header {
 
 .snowflake:nth-child(1) {
   --size: 0.2vw;
-  left: 33vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  left: 95vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
 }
 
 .snowflake:nth-child(2) {
   --size: 0.8vw;
-  left: 41vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  left: 78vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(3) {
-  --size: 1vw;
-  left: 17vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
+  --size: 0.8vw;
+  left: 85vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(4) {
   --size: 0.8vw;
-  left: 48vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  left: 85vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
 }
 
 .snowflake:nth-child(5) {
-  --size: 0.8vw;
-  left: 18vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
+  --size: 0.2vw;
+  left: 62vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(6) {
-  --size: 0.6vw;
-  left: 43vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
+  --size: 0.8vw;
+  left: 40vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
 }
 
 .snowflake:nth-child(7) {
-  --size: 1vw;
-  left: 73vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
-}
-
-.snowflake:nth-child(8) {
-  --size: 0.4vw;
-  left: 42vw;
+  --size: 0.8vw;
+  left: 45vw;
   -webkit-animation: snowfall 8s linear infinite;
           animation: snowfall 8s linear infinite;
 }
 
+.snowflake:nth-child(8) {
+  --size: 0.8vw;
+  left: 9vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
 .snowflake:nth-child(9) {
-  --size: 0.4vw;
-  left: 19vw;
+  --size: 0.8vw;
+  left: 83vw;
   -webkit-animation: snowfall 8s linear infinite;
           animation: snowfall 8s linear infinite;
 }
 
 .snowflake:nth-child(10) {
   --size: 0.2vw;
-  left: 25vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
+  left: 58vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
 }
 
 .snowflake:nth-child(11) {
-  --size: 0.6vw;
-  left: 70vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
+  --size: 0.8vw;
+  left: 9vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(12) {
-  --size: 1vw;
-  left: 64vw;
+  --size: 0.2vw;
+  left: 31vw;
   -webkit-animation: snowfall 7s linear infinite;
           animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(13) {
-  --size: 1vw;
-  left: 42vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(14) {
-  --size: 0.6vw;
-  left: 84vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(15) {
-  --size: 0.4vw;
-  left: 5vw;
+  --size: 0.2vw;
+  left: 3vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
-.snowflake:nth-child(16) {
+.snowflake:nth-child(14) {
+  --size: 0.8vw;
+  left: 89vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
+}
+
+.snowflake:nth-child(15) {
   --size: 0.2vw;
-  left: 6vw;
+  left: 5vw;
   -webkit-animation: snowfall 8s linear infinite;
           animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(16) {
+  --size: 0.8vw;
+  left: 61vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(17) {
-  --size: 0.6vw;
-  left: 72vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  --size: 0.8vw;
+  left: 50vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(18) {
-  --size: 0.8vw;
-  left: 42vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
+  --size: 0.6vw;
+  left: 32vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(19) {
-  --size: 0.6vw;
-  left: 86vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
+  --size: 1vw;
+  left: 44vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(20) {
   --size: 1vw;
-  left: 18vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  left: 7vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
 }
 
 .snowflake:nth-child(21) {
   --size: 1vw;
-  left: 64vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
+  left: 49vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(22) {
-  --size: 0.2vw;
-  left: 1vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
+  --size: 0.6vw;
+  left: 88vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(23) {
-  --size: 0.4vw;
-  left: 35vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
+  --size: 0.6vw;
+  left: 86vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(24) {
   --size: 0.4vw;
-  left: 13vw;
+  left: 40vw;
   -webkit-animation: snowfall 7s linear infinite;
           animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(25) {
-  --size: 0.4vw;
-  left: 78vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
-}
-
-.snowflake:nth-child(26) {
   --size: 0.6vw;
-  left: 93vw;
+  left: 88vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
+.snowflake:nth-child(26) {
+  --size: 0.4vw;
+  left: 92vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
 .snowflake:nth-child(27) {
-  --size: 0.8vw;
-  left: 2vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  --size: 0.4vw;
+  left: 92vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
 }
 
 .snowflake:nth-child(28) {
-  --size: 1vw;
-  left: 8vw;
+  --size: 0.6vw;
+  left: 48vw;
   -webkit-animation: snowfall 9s linear infinite;
           animation: snowfall 9s linear infinite;
 }
 
 .snowflake:nth-child(29) {
-  --size: 0.2vw;
-  left: 45vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 0.8vw;
+  left: 51vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
 }
 
 .snowflake:nth-child(30) {
-  --size: 1vw;
-  left: 91vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
+  --size: 0.8vw;
+  left: 95vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .snowflake:nth-child(31) {
-  --size: 0.6vw;
-  left: 76vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(32) {
   --size: 1vw;
-  left: 19vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
-}
-
-.snowflake:nth-child(33) {
-  --size: 1vw;
-  left: 29vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(34) {
-  --size: 1vw;
-  left: 91vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(35) {
-  --size: 0.6vw;
-  left: 54vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
-}
-
-.snowflake:nth-child(36) {
-  --size: 0.8vw;
-  left: 94vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(37) {
-  --size: 0.8vw;
   left: 33vw;
   -webkit-animation: snowfall 11s linear infinite;
           animation: snowfall 11s linear infinite;
 }
 
-.snowflake:nth-child(38) {
+.snowflake:nth-child(32) {
+  --size: 0.2vw;
+  left: 44vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(33) {
   --size: 1vw;
   left: 6vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
-.snowflake:nth-child(39) {
-  --size: 0.8vw;
-  left: 21vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
+.snowflake:nth-child(34) {
+  --size: 0.4vw;
+  left: 95vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
-.snowflake:nth-child(40) {
+.snowflake:nth-child(35) {
   --size: 1vw;
-  left: 85vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(41) {
-  --size: 0.2vw;
-  left: 82vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(42) {
-  --size: 0.4vw;
-  left: 90vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
-}
-
-.snowflake:nth-child(43) {
-  --size: 0.8vw;
-  left: 2vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(44) {
-  --size: 0.6vw;
-  left: 56vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
-}
-
-.snowflake:nth-child(45) {
-  --size: 0.2vw;
-  left: 51vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
-}
-
-.snowflake:nth-child(46) {
-  --size: 0.4vw;
-  left: 10vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
-}
-
-.snowflake:nth-child(47) {
-  --size: 0.4vw;
-  left: 24vw;
+  left: 40vw;
   -webkit-animation: snowfall 13s linear infinite;
           animation: snowfall 13s linear infinite;
 }
 
-.snowflake:nth-child(48) {
+.snowflake:nth-child(36) {
+  --size: 0.6vw;
+  left: 34vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
+}
+
+.snowflake:nth-child(37) {
+  --size: 1vw;
+  left: 53vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(38) {
+  --size: 0.8vw;
+  left: 47vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
+}
+
+.snowflake:nth-child(39) {
+  --size: 0.8vw;
+  left: 55vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(40) {
   --size: 0.4vw;
-  left: 56vw;
+  left: 76vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(41) {
+  --size: 0.6vw;
+  left: 3vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(42) {
+  --size: 0.8vw;
+  left: 8vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
+}
+
+.snowflake:nth-child(43) {
+  --size: 0.6vw;
+  left: 90vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(44) {
+  --size: 1vw;
+  left: 36vw;
   -webkit-animation: snowfall 7s linear infinite;
           animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(45) {
+  --size: 1vw;
+  left: 47vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(46) {
+  --size: 0.8vw;
+  left: 50vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
+}
+
+.snowflake:nth-child(47) {
+  --size: 0.4vw;
+  left: 43vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
+}
+
+.snowflake:nth-child(48) {
+  --size: 0.6vw;
+  left: 58vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
 }
 
 .snowflake:nth-child(49) {
-  --size: 0.2vw;
-  left: 25vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 0.4vw;
+  left: 43vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
 }
 
 .snowflake:nth-child(50) {
-  --size: 0.6vw;
-  left: 35vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
+  --size: 0.4vw;
+  left: 77vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.circle-1, .circle-2, .circle-3 {
+  position: relative;
+  border-radius: 45%;
+  background-color: #FFFAFA;
+  border: 3px solid #042D29;
+}
+
+.circle-1 {
+  width: 80px;
+  height: 80px;
+  top: 215px;
+  left: 90px;
+  z-index: 20;
+  -webkit-box-shadow: inset 3px -6px 1px #a2a2a2, inset 10px -20px 4px #DCDCDC;
+          box-shadow: inset 3px -6px 1px #a2a2a2, inset 10px -20px 4px #DCDCDC;
+  position: relative;
+}
+.circle-1::before {
+  position: absolute;
+  content: "";
+  width: 12px;
+  height: 12px;
+  top: 20px;
+  left: 23px;
+  border-radius: 50%;
+  background-color: #042D29;
+}
+.circle-1::after {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 10px;
+  top: 18px;
+  left: 43px;
+  border-radius: 50%;
+  background-color: #042D29;
+}
+
+.circle-2 {
+  width: 120px;
+  height: 120px;
+  top: 200px;
+  left: 80px;
+  z-index: 19;
+  -webkit-box-shadow: inset -2px -5px 1px #a2a2a2, inset 15px -25px 4px #DCDCDC;
+          box-shadow: inset -2px -5px 1px #a2a2a2, inset 15px -25px 4px #DCDCDC;
+}
+.circle-2::before, .circle-2::after {
+  content: "";
+  position: absolute;
+  background-color: #800000;
+  border-radius: 50%;
+}
+.circle-2::before {
+  top: 40px;
+  width: 10px;
+  height: 10px;
+  left: 60px;
+}
+.circle-2::after {
+  top: 60px;
+  width: 10px;
+  height: 10px;
+  left: 60px;
+}
+
+.circle-3 {
+  width: 160px;
+  height: 140px;
+  top: 190px;
+  left: 60px;
+  z-index: 18;
+  -webkit-box-shadow: inset -3px -10px 1px #a2a2a2, inset 14px -30px 4px #DCDCDC;
+          box-shadow: inset -3px -10px 1px #a2a2a2, inset 14px -30px 4px #DCDCDC;
+}
+.circle-3::before, .circle-3::after {
+  position: absolute;
+  content: "";
+}
+.circle-3::before {
+  width: 120px;
+  height: 120px;
+  top: -100px;
+  left: -10px;
+  border-radius: 45%;
+  border-left: 4px solid #4b280a;
+}
+.circle-3::after {
+  width: 120px;
+  height: 120px;
+  top: -100px;
+  left: 30px;
+  border-radius: 45%;
+  border-right: 4px solid #4b280a;
+}
+
+.face {
+  position: relative;
+  z-index: 20;
+}
+.face::after {
+  content: "";
+  position: absolute;
+  border-radius: 120px;
+  border: 15px solid transparent;
+  border-left: 70px solid rgb(243, 218, 11);
+  top: -95px;
+  left: 127px;
+}
+.face::before {
+  content: "";
+  position: absolute;
+  top: -96px;
+  left: 120px;
+  width: 30px;
+  height: 30px;
+  border-bottom: 4px solid #042D29;
+  border-radius: 35%;
 }
 
 .calendar {
