--- a/css/calendar-style.css
+++ b/css/calendar-style.css
@@ -114,8 +114,30 @@ nav, footer, header {
     opacity: 1;
   }
 }
-@-webkit-keyframes snowmen {}
-@keyframes snowmen {}
+@-webkit-keyframes snowmen {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.1) rotate(180deg);
+            transform: scale(0.1) rotate(180deg);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes snowmen {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.1) rotate(180deg);
+            transform: scale(0.1) rotate(180deg);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
 .content {
   background-color: #a2a2a2;
   z-index: 0;
@@ -145,6 +167,11 @@ nav, footer, header {
 }
 .content__snowmen {
   position: fixed;
+}
+.content__sled span {
+  display: block;
+  width: 100px;
+  height: auto;
 }
 
 .wave-1, .wave-2 {
@@ -185,356 +212,357 @@ nav, footer, header {
 }
 
 .snowflake:nth-child(1) {
-  --size: 0.2vw;
-  left: 95vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
+  --size: 1vw;
+  left: 43vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .snowflake:nth-child(2) {
-  --size: 0.8vw;
-  left: 78vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
+  --size: 0.6vw;
+  left: 5vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .snowflake:nth-child(3) {
-  --size: 0.8vw;
-  left: 85vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 1vw;
+  left: 84vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(4) {
-  --size: 0.8vw;
-  left: 85vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.2vw;
+  left: 34vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(5) {
   --size: 0.2vw;
-  left: 62vw;
+  left: 69vw;
   -webkit-animation: snowfall 15s linear infinite;
           animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(6) {
-  --size: 0.8vw;
-  left: 40vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 1vw;
+  left: 44vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(7) {
-  --size: 0.8vw;
-  left: 45vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  --size: 0.2vw;
+  left: 19vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(8) {
   --size: 0.8vw;
-  left: 9vw;
+  left: 29vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(9) {
+  --size: 0.2vw;
+  left: 56vw;
   -webkit-animation: snowfall 10s linear infinite;
           animation: snowfall 10s linear infinite;
 }
 
-.snowflake:nth-child(9) {
-  --size: 0.8vw;
-  left: 83vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
-}
-
 .snowflake:nth-child(10) {
-  --size: 0.2vw;
-  left: 58vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.4vw;
+  left: 65vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(11) {
   --size: 0.8vw;
-  left: 9vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  left: 57vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
 }
 
 .snowflake:nth-child(12) {
-  --size: 0.2vw;
-  left: 31vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
+  --size: 0.4vw;
+  left: 73vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
 }
 
 .snowflake:nth-child(13) {
   --size: 0.2vw;
-  left: 3vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
+  left: 54vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(14) {
-  --size: 0.8vw;
-  left: 89vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 1vw;
+  left: 75vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(15) {
-  --size: 0.2vw;
-  left: 5vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  --size: 1vw;
+  left: 20vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(16) {
   --size: 0.8vw;
-  left: 61vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
+  left: 51vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(17) {
-  --size: 0.8vw;
-  left: 50vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(18) {
-  --size: 0.6vw;
-  left: 32vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(19) {
-  --size: 1vw;
-  left: 44vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(20) {
-  --size: 1vw;
-  left: 7vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
-}
-
-.snowflake:nth-child(21) {
-  --size: 1vw;
-  left: 49vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(22) {
-  --size: 0.6vw;
-  left: 88vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
-}
-
-.snowflake:nth-child(23) {
-  --size: 0.6vw;
-  left: 86vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(24) {
   --size: 0.4vw;
-  left: 40vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
-}
-
-.snowflake:nth-child(25) {
-  --size: 0.6vw;
-  left: 88vw;
+  left: 5vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
-.snowflake:nth-child(26) {
+.snowflake:nth-child(18) {
+  --size: 0.8vw;
+  left: 75vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
+}
+
+.snowflake:nth-child(19) {
+  --size: 0.8vw;
+  left: 4vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(20) {
+  --size: 1vw;
+  left: 3vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(21) {
+  --size: 0.2vw;
+  left: 49vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
+}
+
+.snowflake:nth-child(22) {
+  --size: 1vw;
+  left: 76vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(23) {
+  --size: 0.8vw;
+  left: 29vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(24) {
+  --size: 0.2vw;
+  left: 34vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
+}
+
+.snowflake:nth-child(25) {
   --size: 0.4vw;
-  left: 92vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  left: 10vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(26) {
+  --size: 0.2vw;
+  left: 28vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .snowflake:nth-child(27) {
   --size: 0.4vw;
-  left: 92vw;
+  left: 79vw;
   -webkit-animation: snowfall 14s linear infinite;
           animation: snowfall 14s linear infinite;
 }
 
 .snowflake:nth-child(28) {
-  --size: 0.6vw;
-  left: 48vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
+  --size: 1vw;
+  left: 67vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(29) {
   --size: 0.8vw;
-  left: 51vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
+  left: 64vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(30) {
-  --size: 0.8vw;
-  left: 95vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(31) {
-  --size: 1vw;
-  left: 33vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
-}
-
-.snowflake:nth-child(32) {
-  --size: 0.2vw;
-  left: 44vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
-}
-
-.snowflake:nth-child(33) {
-  --size: 1vw;
-  left: 6vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(34) {
   --size: 0.4vw;
-  left: 95vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
-}
-
-.snowflake:nth-child(35) {
-  --size: 1vw;
-  left: 40vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
-}
-
-.snowflake:nth-child(36) {
-  --size: 0.6vw;
-  left: 34vw;
+  left: 67vw;
   -webkit-animation: snowfall 14s linear infinite;
           animation: snowfall 14s linear infinite;
 }
 
-.snowflake:nth-child(37) {
+.snowflake:nth-child(31) {
   --size: 1vw;
-  left: 53vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
-}
-
-.snowflake:nth-child(38) {
-  --size: 0.8vw;
-  left: 47vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
-}
-
-.snowflake:nth-child(39) {
-  --size: 0.8vw;
-  left: 55vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
-}
-
-.snowflake:nth-child(40) {
-  --size: 0.4vw;
-  left: 76vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
-}
-
-.snowflake:nth-child(41) {
-  --size: 0.6vw;
-  left: 3vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
-}
-
-.snowflake:nth-child(42) {
-  --size: 0.8vw;
-  left: 8vw;
+  left: 87vw;
   -webkit-animation: snowfall 6s linear infinite;
           animation: snowfall 6s linear infinite;
 }
 
-.snowflake:nth-child(43) {
+.snowflake:nth-child(32) {
   --size: 0.6vw;
-  left: 90vw;
+  left: 59vw;
   -webkit-animation: snowfall 11s linear infinite;
           animation: snowfall 11s linear infinite;
 }
 
-.snowflake:nth-child(44) {
+.snowflake:nth-child(33) {
   --size: 1vw;
-  left: 36vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
+  left: 91vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
 }
 
-.snowflake:nth-child(45) {
-  --size: 1vw;
-  left: 47vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
-}
-
-.snowflake:nth-child(46) {
-  --size: 0.8vw;
-  left: 50vw;
+.snowflake:nth-child(34) {
+  --size: 0.6vw;
+  left: 71vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
-.snowflake:nth-child(47) {
+.snowflake:nth-child(35) {
+  --size: 0.8vw;
+  left: 92vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(36) {
+  --size: 0.8vw;
+  left: 5vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
+}
+
+.snowflake:nth-child(37) {
+  --size: 1vw;
+  left: 30vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
+}
+
+.snowflake:nth-child(38) {
+  --size: 0.6vw;
+  left: 38vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(39) {
+  --size: 0.8vw;
+  left: 51vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(40) {
+  --size: 0.8vw;
+  left: 48vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(41) {
+  --size: 0.8vw;
+  left: 21vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
+}
+
+.snowflake:nth-child(42) {
+  --size: 1vw;
+  left: 55vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
+}
+
+.snowflake:nth-child(43) {
+  --size: 0.8vw;
+  left: 10vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
+}
+
+.snowflake:nth-child(44) {
+  --size: 0.8vw;
+  left: 20vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(45) {
   --size: 0.4vw;
-  left: 43vw;
+  left: 37vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
+}
+
+.snowflake:nth-child(46) {
+  --size: 0.4vw;
+  left: 38vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(47) {
+  --size: 1vw;
+  left: 3vw;
   -webkit-animation: snowfall 15s linear infinite;
           animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(48) {
   --size: 0.6vw;
-  left: 58vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
+  left: 34vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
 }
 
 .snowflake:nth-child(49) {
-  --size: 0.4vw;
-  left: 43vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.2vw;
+  left: 79vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(50) {
-  --size: 0.4vw;
-  left: 77vw;
-  -webkit-animation: snowfall 11s linear infinite;
-          animation: snowfall 11s linear infinite;
+  --size: 0.8vw;
+  left: 42vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .circle-1, .circle-2, .circle-3 {
+  opacity: 0;
   position: relative;
   border-radius: 45%;
   background-color: #FFFAFA;
@@ -550,8 +578,13 @@ nav, footer, header {
   -webkit-box-shadow: inset 3px -6px 1px #a2a2a2, inset 10px -20px 4px #DCDCDC;
           box-shadow: inset 3px -6px 1px #a2a2a2, inset 10px -20px 4px #DCDCDC;
   position: relative;
+  -webkit-animation: snowmen 6s 0.5s ease-in-out;
+          animation: snowmen 6s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .circle-1::before {
+  opacity: 0;
   position: absolute;
   content: "";
   width: 12px;
@@ -560,8 +593,13 @@ nav, footer, header {
   left: 23px;
   border-radius: 50%;
   background-color: #042D29;
+  -webkit-animation: snowmen 7s 0.5s ease-in-out;
+          animation: snowmen 7s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .circle-1::after {
+  opacity: 0;
   position: absolute;
   content: "";
   width: 10px;
@@ -570,9 +608,14 @@ nav, footer, header {
   left: 43px;
   border-radius: 50%;
   background-color: #042D29;
+  -webkit-animation: snowmen 7s 0.5s ease-in-out;
+          animation: snowmen 7s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .circle-2 {
+  opacity: 0;
   width: 120px;
   height: 120px;
   top: 200px;
@@ -580,24 +623,37 @@ nav, footer, header {
   z-index: 19;
   -webkit-box-shadow: inset -2px -5px 1px #a2a2a2, inset 15px -25px 4px #DCDCDC;
           box-shadow: inset -2px -5px 1px #a2a2a2, inset 15px -25px 4px #DCDCDC;
+  -webkit-animation: snowmen 4s 0.5s ease-in-out;
+          animation: snowmen 4s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .circle-2::before, .circle-2::after {
   content: "";
   position: absolute;
   background-color: #800000;
   border-radius: 50%;
+  opacity: 0;
 }
 .circle-2::before {
   top: 40px;
   width: 10px;
   height: 10px;
   left: 60px;
+  -webkit-animation: snowmen 8s 1s ease-in-out;
+          animation: snowmen 8s 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .circle-2::after {
   top: 60px;
   width: 10px;
   height: 10px;
   left: 60px;
+  -webkit-animation: snowmen 10s 1s ease-in-out;
+          animation: snowmen 10s 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .circle-3 {
@@ -608,10 +664,19 @@ nav, footer, header {
   z-index: 18;
   -webkit-box-shadow: inset -3px -10px 1px #a2a2a2, inset 14px -30px 4px #DCDCDC;
           box-shadow: inset -3px -10px 1px #a2a2a2, inset 14px -30px 4px #DCDCDC;
+  -webkit-animation: snowmen 1s 0.5s ease-in-out;
+          animation: snowmen 1s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .circle-3::before, .circle-3::after {
+  opacity: 0;
   position: absolute;
   content: "";
+  -webkit-animation: snowmen 7s 1s ease-in-out;
+          animation: snowmen 7s 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .circle-3::before {
   width: 120px;
@@ -635,6 +700,7 @@ nav, footer, header {
   z-index: 20;
 }
 .face::after {
+  opacity: 0;
   content: "";
   position: absolute;
   border-radius: 120px;
@@ -642,8 +708,13 @@ nav, footer, header {
   border-left: 70px solid rgb(243, 218, 11);
   top: -95px;
   left: 127px;
+  -webkit-animation: snowmen 6s 0.5s ease-in-out;
+          animation: snowmen 6s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 .face::before {
+  opacity: 0;
   content: "";
   position: absolute;
   top: -96px;
@@ -652,6 +723,10 @@ nav, footer, header {
   height: 30px;
   border-bottom: 4px solid #042D29;
   border-radius: 35%;
+  -webkit-animation: snowmen 6s 0.5s ease-in-out;
+          animation: snowmen 6s 0.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .calendar {
