--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -33,6 +33,16 @@
       transform: scale(1);
    }
 }
+
+@keyframes move-sled {
+   0% { 
+      offset-distance: 0%;
+   }
+   100% { 
+      offset-distance: 100%;
+   }
+}
+
 .content {
    background-color: $color-8;
    z-index: 0;
@@ -57,12 +67,42 @@
    &__snowmen {
       position:fixed;
    }
-   &__sled span{
-      display: block;
-      width: 100px;
-      height: auto;
+/*
+   &__sled {
+      position: fixed;
+      offset-path: path("M-274,13 C250,20 30,292 1300,12");
+      offset-rotate: reverse;
+      offset-rotate: 0deg;
+      offset-rotate: auto;
+      animation: move-sled 5s 6s linear infinite;
+      width: 140px;
+      height: 140px;
+      background: hotpink;
+      border-radius: 50%;
+   }
+*/
+   &__deer {
+      position: fixed;
+      z-index: 3;
+   }
+   &__deer img{
+      margin-top: 40px;
+      offset-path: path("M1504,193 C438,26 190,10 -346,56");
+      offset-rotate: reverse;
+      animation: move-sled 5s 8s linear infinite;
+      width: 300px;
+      height: 300px;
+   }
+   &__deer img{
+      margin-top: 40px;
+      offset-path: path("M1504,193 C438,26 190,10 -346,56");
+      offset-rotate: reverse;
+      animation: move-sled 5s 8s linear infinite;
+      width: 300px;
+      height: 300px;
    }
 }
+
 .wave-1, .wave-2 {
    position: fixed;
    width: 100%;
@@ -93,7 +133,7 @@
    border-radius: 50%;
    position: absolute;
    top: -5vh;
-   z-index: 2;
+   z-index: 1000;
 }
 
 @for $i from 1 through 50 {
@@ -122,8 +162,9 @@
       inset 3px -6px 1px $color-8,
       inset 10px -20px 4px $wave-2;
    position:relative;
-   animation: snowmen 6s 0.5s ease-in-out;
+   animation: snowmen 300ms 0.5s ease-in-out;
    animation-fill-mode: forwards;
+
       &::before {
       opacity:0;
       position: absolute;
@@ -134,7 +175,7 @@
       left: 23px;
       border-radius: 50%;
       background-color: $color-6;
-      animation: snowmen 7s 0.5s ease-in-out;
+      animation: snowmen 500ms 1s ease-in-out;
       animation-fill-mode: forwards;
    }
    &::after {
@@ -147,7 +188,7 @@
       left: 43px;
       border-radius: 50%;
       background-color: $color-6;
-      animation: snowmen 7s 0.5s ease-in-out;
+      animation: snowmen 500ms 1s ease-in-out;
       animation-fill-mode: forwards;
    }
 
@@ -162,7 +203,7 @@
    box-shadow: 
       inset -2px -5px 1px $color-8,
       inset 15px -25px 4px $wave-2;
-      animation: snowmen 4s 0.5s ease-in-out;
+      animation: snowmen 600ms 0.5s ease-in-out;
       animation-fill-mode: forwards;
    &::before, 
    &::after {
@@ -177,7 +218,7 @@
       width: 10px;
       height: 10px;
       left: 60px;
-      animation: snowmen 8s 1s ease-in-out;
+      animation: snowmen 400ms 3s ease-in-out;
       animation-fill-mode: forwards;
    }
    &::after {
@@ -185,7 +226,7 @@
       width: 10px;
       height: 10px;
       left: 60px;
-      animation: snowmen 10s 1s ease-in-out;
+      animation: snowmen 600ms 3s ease-in-out;
       animation-fill-mode: forwards;
    }
 
@@ -199,14 +240,14 @@
    box-shadow: 
       inset -3px -10px 1px $color-8,
       inset 14px -30px 4px $wave-2;
-   animation: snowmen 1s 0.5s ease-in-out;
+   animation: snowmen 10ms 0.5s ease-in-out;
    animation-fill-mode: forwards;
 
    &::before, &::after {
       opacity:0;
       position: absolute;
       content: '';
-      animation: snowmen 7s 1s ease-in-out;
+      animation: snowmen 300ms 4s ease-in-out;
       animation-fill-mode: forwards;
    }
    &::before {
@@ -239,7 +280,7 @@
       border-left: 70px solid $color-3;
       top: -95px;
       left: 127px; 
-      animation: snowmen 6s 0.5s ease-in-out;
+      animation: snowmen 500ms 2s ease-in-out;
       animation-fill-mode: forwards;
   }
   &::before {
@@ -252,7 +293,7 @@
    height: 30px;
    border-bottom: 4px solid $color-6;
    border-radius: 35%;
-   animation: snowmen 6s 0.5s ease-in-out;
+   animation: snowmen 400ms 3s ease-in-out;
    animation-fill-mode: forwards;
   }
 }
@@ -265,9 +306,10 @@
    align-items:center;
    gap: 15px;
    flex-wrap: wrap;
-  padding-left: 200px;
+   padding-top:100px;
+   padding-left: 200px;
    padding-bottom: 200px;
-
+   z-index:500;
    &__card {
       width: 8rem;
       height: 8rem;
