--- a/#source/common-style.scss
+++ b/#source/common-style.scss
@@ -51,9 +51,14 @@ nav, footer, header {
 
 
    &__header {
-      height: 60px;
+      height: 90px;
       width: 100%;
       background-color: $color-2;
+      display: flex;
+      justify-content: flex-end;
+      align-items:center;
+      padding: 40px;
+      margin: 0;
    }
    &__content {
       min-height: 100vh;
@@ -68,4 +73,44 @@ nav, footer, header {
       z-index: 10;
       position: relative;
    }
+}
+
+.button {
+   width: 13rem;
+   height: 40px;
+   padding: 5px;
+   background-color: $wave-2;
+   text-align: center;
+   border: 1px solid $border;
+   position: relative;
+   display: flex;
+   justify-content: center;
+}
+.button span {
+   display: block;
+   width: 10px;
+   height:10px;
+   opacity: 1;
+
+}
+.button::after {
+   position:absolute;
+   content:'Нарядить елку';
+   top:2px;
+   left:24px;
+   font-size: 18px;
+   text-transform: uppercase;
+   opacity: 0;
+}
+.button:hover {
+   background-color: $color-3;
+   transition: 300ms ease-in-out;
+}
+.button:hover::after {
+   opacity:1;
+   transition: 300ms ease-in-out;
+}
+.button:hover span {
+   opacity:0;
+   transition: 300ms ease-in-out;
 }
