--- a/css/index-style.css
+++ b/css/index-style.css
@@ -47,9 +47,20 @@ nav, footer, header {
   width: 100%;
 }
 .page__header {
-  height: 60px;
+  height: 90px;
   width: 100%;
   background-color: #25330F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px;
+  margin: 0;
 }
 .page__content {
   min-height: 100vh;
@@ -63,6 +74,57 @@ nav, footer, header {
   background-color: #25330F;
   z-index: 10;
   position: relative;
+}
+
+.button {
+  width: 13rem;
+  height: 40px;
+  padding: 5px;
+  background-color: #DCDCDC;
+  text-align: center;
+  border: 1px solid rgba(75, 40, 10, 0.8);
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.button span {
+  display: block;
+  width: 10px;
+  height: 10px;
+  opacity: 1;
+}
+
+.button::after {
+  position: absolute;
+  content: "Нарядить елку";
+  top: 2px;
+  left: 24px;
+  font-size: 18px;
+  text-transform: uppercase;
+  opacity: 0;
+}
+
+.button:hover {
+  background-color: rgb(243, 218, 11);
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.button:hover::after {
+  opacity: 1;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.button:hover span {
+  opacity: 0;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 
 .page {
